# memory-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.py
.claude-plugin/: marketplace.json
hooks/: session_start.py
memory.example/: MEMORY.md  identity.md  preferences-coding.md  project-example.md  reference-example.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: setup.md
plugin/hooks/: hooks.json  mirror_write.py  session_start.py
plugin/lib/: client.py  config.py
